# Kviewer

./: .gitignore  .replit  CHANGELOG.md  INSTALL.md  README.md  demo.py  dependencies.txt  main.py  pyproject.toml  replit.nix  web_demo.py
app/: __init__.py  config.py
app/assets/shaders/: default.frag  default.vert
app/models/: __init__.py  avatar.py  inventory.py  object.py  region.py  user.py
app/network/: __init__.py  connection.py  opensim_protocol.py  packet_handler.py
app/renderer/: __init__.py  avatar.py  camera.py  object.py  scene.py  shader.py  terrain.py  texture.py
app/ui/: __init__.py  chat_panel.py  inventory_panel.py  login_panel.py  main_window.py  mini_map.py  qt_chat_panel.py  qt_inventory_panel.py  qt_login_panel.py  qt_main_window.py  qt_mini_map.py  qt_toolbar.py  qt_world_view.py  toolbar.py  world_view.py
app/utils/: __init__.py  helpers.py  logger.py  matrix.py  vector.py
static/css/: style.css
static/js/: main.js
static/js/three/: avatar.js  object.js  scene.js  terrain.js
static/js/ui/: appearance.js  building.js  inventory.js  tabs.js
templates/: index.html
